--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "dev": "nodemon ./server/server.js",
     "build": "webpack",
     "watch": "webpack -w",
-    "lint": "eslint ./server/**/*",
+    "lint": "eslint *.js",
     "clean-logs": "node ./tools/clean-logs.js",
     "refresh-data": "npm run get-mapbox-dataset && npm run validate-mapbox-dataset && npm run mapbox-dataset-add-center-of-mass && npm run create-territory-list",
     "get-mapbox-dataset": "node ./tools/get-mapbox-dataset.js",
     "validate-mapbox-dataset": "node ./tools/validate-mapbox-dataset.js",
     "mapbox-dataset-add-center-of-mass": "node ./tools/mapbox-dataset-add-center-of-mass.js",
     "create-territory-list": "node ./tools/create-territory-list.js",
+    "bot-spectator": "nodemon bots/spectator.js --config ./nodemon.bots.json",
     "bot:dev": "nodemon ./bots/bot.js --config ./nodemon.bots.json",
     "bot-challenger:dev": "nodemon ./bots/challenger.js --config ./nodemon.bots.json",
     "territory-graph": "nodemon ./tools/graph/territoryGraph.js",
