--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "create-territory-list": "node ./tools/create-territory-list.js",
     "bot": "nodemon --config ./nodemon.bots.json ./bots/botRunner.js ",
     "territory-graph": "nodemon ./tools/graph/territoryGraph.js",
-    "test": "mocha --recursive ./server/**/*.test.js"
+    "test": "nyc mocha ./server ./bots"
   },
   "author": "Lennart Kroneman",
   "license": "ISC",
@@ -35,6 +35,7 @@
     "lodash": "^4.17.19",
     "mini-css-extract-plugin": "^0.7.0",
     "proj4": "^2.5.0",
+    "sinon": "^9.2.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
@@ -65,6 +66,7 @@
     "mocha": "^8.1.3",
     "node-sass": "^4.14.1",
     "nodemon": "^1.19.1",
+    "nyc": "^15.1.0",
     "sass-loader": "^7.1.0",
     "scss-loader": "0.0.1",
     "vue-loader": "^14.2.4",
@@ -74,7 +76,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm test"
+      "pre-commit": "lint-staged && yarn test"
     }
   },
   "lint-staged": {
